Fix workflow